--- a/css/estilos.css
+++ b/css/estilos.css
@@ -65,3 +65,9 @@ h1 {
 .tecla:active:focus {
   box-shadow: 3px 3px 0 var(--vermelha-escura) inset, 1px 1px 10px var(--luz);
 }
+
+.bg{
+  background-image: url('./passarinhos2.jpg');
+  background-repeat: no-repeat;
+  background-size:auto;
+}
